--- a/main.css
+++ b/main.css
@@ -82,6 +82,20 @@ button:hover {
     box-shadow: 0 6px 14px rgba(0,0,0,0.15);
 }
 
+.image-container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+#image-description {
+    text-align: center;
+    font-style: italic;
+    font-size: 16px;
+    color: #5c4b4b;
+    opacity: 0.8;
+}
+
+
 #background-bubbles {
     position: fixed;
     top: 0;
